Login jump fix.

--- a/css/e-prawnik.biz/layout/navbar.scss
+++ b/css/e-prawnik.biz/layout/navbar.scss
@@ -281,7 +281,7 @@
     
 
 .body--glazed-nav-desktop #navbar .region-navigation-collapsible > #block-robco-main-menu > .menu-level-0 > .dropdown > a:hover > span,
-.body--glazed-nav-desktop #navbar .region-navigation-collapsible > #block-robco-account-menu > .menu--account > li:hover > a{
+.body--glazed-nav-desktop #navbar .region-navigation-collapsible > #block-robco-account-menu > .menu--account > li:hover > a > span{
   position: relative;
   bottom: -1px!important;
 }
